WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179695
Log moveFile failure errors
https://bugs.webkit.org/show_bug.cgi?id=179695
Summary
Log moveFile failure errors
Alex Christensen
Reported
2017-11-14 14:55:15 PST
Log moveFile failure errors
Attachments
Patch
(1.63 KB, patch)
2017-11-14 14:56 PST
,
Alex Christensen
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-11-14 14:56:59 PST
Created
attachment 326928
[details]
Patch
Alex Christensen
Comment 2
2017-11-14 14:59:53 PST
http://trac.webkit.org/r224850
Alex Christensen
Comment 3
2017-11-14 21:58:52 PST
Here's an example of the log this produces: 2017-11-14 17:53:50.204 WebKitTestRunner[63613:1440909] Error in moveFile: Error Domain=NSCocoaErrorDomain Code=4 "“ContentRuleListWVDp3h” couldn’t be moved to “ContentExtensions” because either the former doesn’t exist, or the folder containing the latter doesn’t exist." UserInfo={NSSourceFilePathErrorKey=/var/folders/cx/86nvz4dn2hj7t_1sczmy517w0000gn/T/WebKitTestRunners-bv_a7e/ContentRuleListWVDp3h, NSUserStringVariant=( Move ), NSDestinationFilePath=/Users/buildbot/Library/WebKit/WebKitTestRunner/ContentExtensions/ContentExtension-TestContentExtensions, NSFilePath=/var/folders/cx/86nvz4dn2hj7t_1sczmy517w0000gn/T/WebKitTestRunners-bv_a7e/ContentRuleListWVDp3h, NSUnderlyingError=0x7ff677783e30 {Error Domain=NSPOSIXErrorDomain Code=2 "No such file or directory"}} Content Rule List compiling failed: Moving file failed. 2017-11-14 17:53:50.204 WebKitTestRunner[63613:1425579] Rule list compilation failed: Unspecified error during compile.
Alex Christensen
Comment 4
2017-11-14 23:29:20 PST
Speculative fix in
https://bugs.webkit.org/show_bug.cgi?id=179719
Radar WebKit Bug Importer
Comment 5
2017-11-15 09:31:21 PST
<
rdar://problem/35561855
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug