Log moveFile failure errors https://bugs.webkit.org/show_bug.cgi?id=179695

Reviewed by Brady Eidson.

Content extension tests are flaky. In r224790 I added logs to find out why, and they indicate that moveFile is failing.
To further understand why, I'm adding logs to see what's happening sometimes on the bots.

* platform/cocoa/FileSystemCocoa.mm:
(WebCore::FileSystem::moveFile):



Canonical link: https://commits.webkit.org/195731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224850 268f45cc-cd09-0410-ab3c-d52691b4dbfc